--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ psycopg2==2.9.10
 python-dotenv==1.0.1
 streamlit==1.43.2
 streamlit_drawable_canvas==0.9.3
-torch==2.6.0
-torchvision
--f https://download.pytorch.org/whl/torch_stable.html
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
+-f https://download.pytorch.org/whl/cpu/torch_stable.html
 
 
